# Web-hw-14

./: .coverage  .env  .env.example  .env.test  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db  test_api.py
app/: README.md  cloudinary_utils.py  config.py  crud.py  database.py  mailer.py  main.py  models.py  schemas.py
app/cloudinary_utils/: cloudinary_utils.py
app/config/: config.py
app/crud/: crud.py
app/database/: database.py  db.py
app/models/: models.py
app/redis_cache/: redis_cache.py
app/routes/: auth.py  contacts.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: app.doctree  modules.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/app/: main.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_sources/source/: app.rst.txt  modules.rst.txt
docs/_build/html/source/: app.html  modules.html
docs/source/: modules.rst
test/: test_functional_contacts.py  test_unit_repository_contacts.py
tests/: conftest.py  test_functional_contacts.py  test_unit_repository_auth.py  test_unit_repository_contacts.py
