[tool.poetry]
name = "web-hw-13"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = { extras = ["standard"], version = ">=0.35.0,<0.36.0" }
sqlalchemy = ">=2.0.43,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pydantic = ">=2.11.7,<3.0.0"
fastapi-limiter = "^0.1.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
